--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         header.onerror = () => {
             document.getElementById('placeholder').textContent = 'Error loading header image';
         };
-        header.src = '/assets/header.png';
+        header.src = 'assets/header.png';
 
         // Handle poster upload
         document.getElementById('fileInput').addEventListener('change', (e) => {
