--- a/index.html
+++ b/index.html
@@ -241,22 +241,24 @@
             ctx.fillRect(0, 0, canvasWidth, canvasHeight);
 
             // Header dimensions
-            const headerHeight = 120;
+            const headerHeight = 100;
             
             // Get footer text
             const footerText = document.getElementById('footerText').value;
             
             // Calculate footer height based on text
             ctx.font = 'bold 32px "Courier New", monospace';
-            const maxWidth = canvasWidth - 80;
+            const maxWidth = canvasWidth - 60;
             const lines = wrapText(ctx, footerText, maxWidth);
             const lineHeight = 40;
-            const footerPadding = 20;
-            const footerHeight = lines.length > 0 ? (lines.length * lineHeight + footerPadding * 2) : 60;
+            const footerPadding = 15;
+            const footerHeight = lines.length > 0 ? (lines.length * lineHeight + footerPadding * 2) : 50;
 
-            // Calculate available space for poster
-            const availableHeight = canvasHeight - headerHeight - footerHeight;
-            const availableWidth = canvasWidth - 80;
+            // Calculate available space for poster with minimal margins
+            const sideMargin = 30;
+            const verticalMargin = 20;
+            const availableHeight = canvasHeight - headerHeight - footerHeight - (verticalMargin * 2);
+            const availableWidth = canvasWidth - (sideMargin * 2);
 
             // Calculate poster dimensions to fit within available space
             const posterAspect = posterImage.width / posterImage.height;
@@ -270,9 +272,9 @@
                 posterHeight = posterWidth / posterAspect;
             }
 
-            // Center the poster
+            // Center the poster vertically in available space
             const posterX = (canvasWidth - posterWidth) / 2;
-            const posterY = headerHeight + (availableHeight - posterHeight) / 2;
+            const posterY = headerHeight + verticalMargin + (availableHeight - posterHeight) / 2;
 
             // Draw poster
             ctx.drawImage(posterImage, posterX, posterY, posterWidth, posterHeight);
