--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Poster Framer</title>
+    <title>RC Social Post Maker</title>
     <style>
         * {
             margin: 0;
@@ -130,7 +130,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Movie Poster Framer</h1>
+        <h1>RC Social Post Maker</h1>
         
         <div class="grid">
             <!-- Controls -->
